--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <h2>2. 스타일별 이름 추천 (GPT 기반)</h2>
   <div>
-    <button class="category" onclick="recommend('soft')">❤️ 부드러운 느낌</button>
+    <button class="category" onclick="recommend('soft')">❤️ 부드럽고 느낌</button>
     <button class="category" onclick="recommend('strong')">🔥 강한 인상</button>
     <button class="category" onclick="recommend('classic')">🏛 전통적인 이름</button>
     <button class="category" onclick="recommend('popular')">📈 최근 인기</button>
@@ -106,11 +106,16 @@
         });
 
         const data = await res.json();
-        if (!res.ok) throw new Error();
+        if (!res.ok || !data.names) throw new Error();
 
         resultBox.innerHTML = data.names.map(line => {
           const [title, ...desc] = line.split("–");
-          return `<div><span class="name-title">${title.trim()}</span><span class="name-desc">${desc.join("–").trim()}</span></div>`;
+          return `
+            <div>
+              <span class="name-title">${title.trim()}</span>
+              <span class="name-desc">${desc.join("–").trim()}</span>
+            </div>
+          `;
         }).join("");
 
         if (requestCount < 3) {
