--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <h2>2. 스타일별 이름 추천 (GPT 기반)</h2>
   <div>
-    <button class="category" onclick="recommend('soft')">❤️ 부드럽고 느낌</button>
+    <button class="category" onclick="recommend('soft')">❤️ 부드러운 느낌</button>
     <button class="category" onclick="recommend('strong')">🔥 강한 인상</button>
     <button class="category" onclick="recommend('classic')">🏛 전통적인 이름</button>
     <button class="category" onclick="recommend('popular')">📈 최근 인기</button>
