--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <button onclick="analyzeName()">의미 분석</button>
   <div id="meaning-result" class="result-box"></div>
 
-  <h2>2. 스타일별 이름 추천 (GPT 기반)</h2>
+  <h2>2. 스타일별 이름 추천</h2>
   <div>
     <button class="category" onclick="recommend('soft')">❤️ 부드러운 느낌</button>
     <button class="category" onclick="recommend('strong')">🔥 강한 인상</button>
