--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       font-size: 1.1rem;
     }
     .name-desc {
+      font-weight: normal; /* 추가됨 */
       color: gray;
       display: block;
       margin-bottom: 10px;
@@ -108,7 +109,10 @@
         const data = await res.json();
         if (!res.ok || !data.names) throw new Error();
 
-        resultBox.innerHTML = data.names.map(line => {
+        // 설명만 있는 문장 제거 (예: GPT 설명)
+        const filteredNames = data.names.filter(line => line.includes("–"));
+
+        resultBox.innerHTML = filteredNames.map(line => {
           const [title, ...desc] = line.split("–");
           return `
             <div>
@@ -134,3 +138,4 @@
   </script>
 </body>
 </html>
+
